--- a/src/assets/ljncustom.css
+++ b/src/assets/ljncustom.css
@@ -10,6 +10,11 @@ body {
 .flex {
   display: flex;
 }
+
 .justify-content-end {
   justify-content: flex-end;
+}
+
+.justify-space-between {
+  justify-content: space-between;
 }
