--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,11 @@
 @import './base.css';
 
+html {
+  overflow-y: scroll;
+}
 #app {
   /* max-width: 1280px; */
+  width: 1280px;
   margin: 0 auto;
   /* padding: 2rem; */
 
